# Sprints-Embedded-Linux

./: CMakeLists.txt
IPC_LIBRARY/include/: ErrorHandling.h  IPC_LIBRARY.h  MessageQueueReceiver.h  MessageQueueSender.h
IPC_LIBRARY/src/: ErrorHandling.cpp  MessageQueueReceiver.cpp  MessageQueueSender.cpp  main.cpp
Logger_Daemon_Application/: LoggerDaemon.cpp  LoggerDaemon.h  main.cpp
Mathematical_Operation_Applications/: MathApp.cpp  MathApp.h  main.cpp
